force-app/main/default/objects/Dummy32__c/Dummy32__c.object-meta.xml
<CustomObject>
    <label>Dummy32</label>
    <nameField>
        <label>Dummy32 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dummy32</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>