force-app/main/default/objects/Dummy32__c/fields/FooBar017__c.field-meta.xml
<CustomField>
    <fullName>FooBar017__c</fullName>
    <label>FooBar017</label>
    <length>255</length>
    <type>Text</type>
</CustomField>