force-app/main/default/objects/Dummy32__c/fields/FooBar162__c.field-meta.xml
<CustomField>
    <fullName>FooBar162__c</fullName>
    <label>FooBar162</label>
    <length>255</length>
    <type>Text</type>
</CustomField>