force-app/main/default/objects/Dummy32__c/fields/FooBar172__c.field-meta.xml
<CustomField>
    <fullName>FooBar172__c</fullName>
    <label>FooBar172</label>
    <length>255</length>
    <type>Text</type>
</CustomField>